💄CSS: fixed Section z-index issues

--- a/src/components/Section.scss
+++ b/src/components/Section.scss
@@ -11,6 +11,7 @@
         top:0;
         right: 0;
         left: 0;
+        z-index: 999;
     }
 
     h2 {
