--- a/src/components/Separator.scss
+++ b/src/components/Separator.scss
@@ -2,7 +2,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 999;
 
     // calculate width of separator to span all of <PageTemplate /> minus its padding
     width: calc(min(100vw, var(--max-width)) - var(--nav-size) - var(--pad-sm) - (2 * var(--border-width)) - (2 * var(--pad-xxl)));
